Update to the latest Spring version