@@ -22,3 +22,10 @@ NOTE that, Hibernate Query cache is not compatible with these Ignite version and
 4) build and run the Webservice as follows: java --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -jar ./target/mybatis-1.0-SNAPSHOT.one-jar.jar
 5) Use google chrome Wizdler plugin to invoke the service getEmployee
 
+### To run Memoization example:
+1) Install PostgreSQL version 14 or above.
+2) Use default configuration connection parameters or edit the /resources/jdbc.properties file corresponding to your configuration
+3) execute the DDL and DML scripts from the folder /scripts
+4) build and run the Webservice as follows: java --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED -jar ./target/memoization-1.0-SNAPSHOT.one-jar.jar
+5) Use google chrome Wizdler plugin to invoke the service related to Exchange rate
+
